--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
   <title>SPA</title>
 </head>
 <body>
-  
+  <nav>
+    <a href="/" onclick="route()">Home</a>
+    <a href="/about" onclick="route()">Sobre</a>
+    <a href="/contato" onclick="route()">Contact</a>
+    <a href="/404" onclick="route()">404</a>
+  </nav>
+
+  <div id="app"></div>
+
+  <script>
+    function route(event){
+      event = event || window.event
+      event.preventDefault()
+    }
+  </script>
 </body>
 </html>
